@@ -15,6 +15,9 @@
  - Add a StrandBiasFilter in somatic analyses. The filter rejects variations that are not represented on both
    strands when at least j reads support the variation. The value of j is set to 9 by default, so a variation with
    10 bases needs to have
+ - Remove candidate somatic variation that can occur when the germline samples have less coverage than the
+   somatic sample. Now require at least twice the coverage in the somatic sample than the minimum coverage
+   in the germline samples.
 2.3.2
  - run-parallel-mode now supports paired input files.
  - fasta-to-compact: add --force-quality-encoding option to force the quality values within the specified
